nfv-guest: inherit kernel cmdline from realtime profile
Signed-off-by: Luiz Capitulino <lcapitulino@redhat.com>

--- a/profiles/realtime-virtual-guest/tuned.conf
+++ b/profiles/realtime-virtual-guest/tuned.conf
@@ -24,4 +24,4 @@ assert2=${f:assertion:isolated_cores contains present CPU(s):${isolated_cores_ex
 script=${i:PROFILE_DIR}/script.sh
 
 [bootloader]
-cmdline=isolcpus=${isolated_cores} nohz=on nohz_full=${isolated_cores} rcu_nocbs=${isolated_cores} intel_pstate=disable nosoftlockup
+cmdline+=nohz=on nohz_full=${isolated_cores} rcu_nocbs=${isolated_cores}
