nfv-host: inherit kernel cmdline from realtime profile
Signed-off-by: Luiz Capitulino <lcapitulino@redhat.com>

--- a/profiles/realtime-virtual-host/tuned.conf
+++ b/profiles/realtime-virtual-host/tuned.conf
@@ -55,4 +55,4 @@ group.ktimersoftd=0:f:3:*:ktimersoftd.*
 script=${i:PROFILE_DIR}/script.sh
 
 [bootloader]
-cmdline=isolcpus=${isolated_cores} nohz=on nohz_full=${isolated_cores} rcu_nocbs=${isolated_cores} intel_pstate=disable nosoftlockup
+cmdline+=nohz=on nohz_full=${isolated_cores} rcu_nocbs=${isolated_cores}
