realtime-virtual-host/guest: added suffix to cmdline
This is a workaround how to overcame the internal parser / merger limitation.

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/profiles/realtime-virtual-guest/tuned.conf
+++ b/profiles/realtime-virtual-guest/tuned.conf
@@ -24,4 +24,4 @@ assert2=${f:assertion:isolated_cores contains present CPU(s):${isolated_cores_ex
 script=${i:PROFILE_DIR}/script.sh
 
 [bootloader]
-cmdline+=nohz=on nohz_full=${isolated_cores} rcu_nocbs=${isolated_cores}
+cmdline_rvg+=nohz=on nohz_full=${isolated_cores} rcu_nocbs=${isolated_cores}
