realtime: fixed typos in cmdline add
Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/profiles/realtime-virtual-guest/tuned.conf
+++ b/profiles/realtime-virtual-guest/tuned.conf
@@ -38,4 +38,4 @@ group.ktimersoftd=0:f:3:*:ktimersoftd.*
 script=${i:PROFILE_DIR}/script.sh
 
 [bootloader]
-cmdline_rvg+=nohz=on nohz_full=${isolated_cores} rcu_nocbs=${isolated_cores}
+cmdline_rvg=+nohz=on nohz_full=${isolated_cores} rcu_nocbs=${isolated_cores}
