--- a/recommend.conf
+++ b/recommend.conf
@@ -1,14 +1,23 @@
 # Tuned rules for recommend_profile.
 #
-# The 'virt' RE matches virt-what output.
-# The 'system' RE matches content of /etc/system-release-cpe.
+# Syntax:
+# [PROFILE1]
+# KEYWORD11=RE11
+# KEYWORD21=RE12
 #
-# If the parameter starts with '/' it means path to file which content is
-# checked, e.g.:
-# /etc/passwd=.+
-# If file doesn't exist, its RE will not match.
-#
-# Al 'virt', 'system' and files have to match for profile to match.
+# [PROFILE2]
+# KEYWORD21=RE21
+# KEYWORD22=RE22
+
+# KEYWORD can be:
+# virt    - for RE to match output of virt-what
+# system  - for RE to match content of /etc/system-release-cpe
+# process - for RE to match running processes. It can have arbitrary suffix, all
+#           process* lines have to match for the PROFILE to match (i.e. the AND operator)
+# /FILE   - for RE to match content of the FILE, e.g.: '/etc/passwd=.+'. If file doesn't
+            exist, its RE will not match.
+
+# All REs for all KEYWORDs have to match for PROFILE to match (i.e. the AND operator).
 # If 'virt' or 'system' is not specified, it matches for every string.
 # If 'virt' or 'system' is empty, i.e. 'virt=', it matches only empty string (alias for '^$').
 # If several profiles matched, the first match is taken.
