Mark a comment in recommend.conf
Signed-off-by: Ondřej Lysoněk <olysonek@redhat.com>

--- a/recommend.conf
+++ b/recommend.conf
@@ -15,7 +15,7 @@
 # process - for RE to match running processes. It can have arbitrary suffix, all
 #           process* lines have to match for the PROFILE to match (i.e. the AND operator)
 # /FILE   - for RE to match content of the FILE, e.g.: '/etc/passwd=.+'. If file doesn't
-            exist, its RE will not match.
+#           exist, its RE will not match.
 
 # All REs for all KEYWORDs have to match for PROFILE to match (i.e. the AND operator).
 # If 'virt' or 'system' is not specified, it matches for every string.
