Change desktop menu category for tuned-gui
Change from not sufficient category 'System' to well known category
'Settings;HardwareSettings'.

--- a/tuned-gui.desktop
+++ b/tuned-gui.desktop
@@ -6,5 +6,5 @@ Exec=/usr/sbin/tuned-gui
 Icon=tuned
 Terminal=false
 Type=Application
-Categories=System;
+Categories=Settings;HardwareSettings;
 Version=1.0
