network-latency: added skew_tick=1 kernel command line parameter
Also removed the parameter from the realtime profile, because it already
includes the network-latency profile.

Resolves: rhbz#1451073

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/profiles/network-latency/tuned.conf
+++ b/profiles/network-latency/tuned.conf
@@ -14,3 +14,6 @@ net.core.busy_read=50
 net.core.busy_poll=50 
 net.ipv4.tcp_fastopen=3
 kernel.numa_balancing=0
+
+[bootloader]
+cmdline=skew_tick=1
