sap-hana: fixed description of the sap-hana profiles
Resolves: rhbz#1482005

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/profiles/sap-hana-vmware/tuned.conf
+++ b/profiles/sap-hana-vmware/tuned.conf
@@ -3,7 +3,7 @@
 #
 
 [main]
-summary=Optimize for SAP running inside a VMware guest
+summary=Optimize for SAP HANA running inside a VMware guest
 include=throughput-performance
 
 [cpu]
