plugin_video: merged radeon 'dpm' into radeon_powersave
Now, in addition to the already supported Radeon power methods, it also
supports:

radeon_powersave=DPM

where DPM can be 'battery', 'balanced', or 'performance'.

It also supports fallback, so one can write:

radeon_powersave=balanced, auto

where it tries 'balanced' DPM profile and if it fails or is not
supported it fallbacks to the non DPM 'auto' profile.

As delimiters colon, semilocon, comma or whitespace can be used.

It also switched upstream profiles to prefer DPM.

https://github.com/redhat-performance/tuned/pull/32

Related: rhbz#1417659

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/profiles/desktop-powersave/tuned.conf
+++ b/profiles/desktop-powersave/tuned.conf
@@ -7,7 +7,7 @@ summary=Optmize for the desktop use-case with power saving
 include=server-powersave
 
 [video]
-radeon_powersave=auto
+radeon_powersave=powersave, auto
 
 [net]
 # Comma separated list of devices, all devices if commented out.
