--- a/profiles/powersave/tuned.conf
+++ b/profiles/powersave/tuned.conf
@@ -17,7 +17,7 @@ energy_perf_bias=powersave
 timeout=10
 
 [video]
-radeon_powersave=auto
+radeon_powersave=powersave, auto
 
 [disk]
 # Comma separated list of devices, all devices if commented out.
