profiles: Use net plugin to disable LRO in sap-hana-vmware
Use net plugin to disable large receive offload in sap-hana-vmware profile.
This also fixes rollback of the setting - previously, after unapplying
the profile, LRO would always be set to 'on', irrespectively of the
original setting.

The network interfaces which should have LRO disabled must be listed
in /etc/tuned/sap-hana-vmware-variables.conf, e.g. like this:
sap_hana_vmware_nic=eth0

Signed-off-by: Ondřej Lysoněk <olysonek@redhat.com>

--- a/profiles/sap-hana-vmware/tuned.conf
+++ b/profiles/sap-hana-vmware/tuned.conf
@@ -6,6 +6,11 @@
 summary=Optimize for SAP HANA running inside a VMware guest
 include=throughput-performance
 
+[variables]
+# User is responsible for setting sap_hana_vmware_nic
+# in sap-hana-vmware-variables.conf
+include=/etc/tuned/sap-hana-vmware-variables.conf
+
 [cpu]
 force_latency=1
 
@@ -17,5 +22,6 @@ vm.swappiness = 30
 kernel.sem = 1250 256000 100 8192
 kernel.numa_balancing = 0
 
-[script]
-script=${i:PROFILE_DIR}/script.sh
+[net]
+devices=${sap_hana_vmware_nic}
+features=lro off
