profiles: Use 'power' instead of 'powersave' in energy_perf_bias
The x86_energy_perf_policy program changed its interface in the 4.13
kernel. The value 'power' now has to be used instead of 'powersave'.

Resolves: rhbz#1508468

--- a/profiles/powersave/tuned.conf
+++ b/profiles/powersave/tuned.conf
@@ -7,7 +7,7 @@ summary=Optimize for low power consumption
 
 [cpu]
 governor=ondemand
-energy_perf_bias=powersave
+energy_perf_bias=power
 
 [eeepc_she]
 
