--- a/profiles/powersave/tuned.conf
+++ b/profiles/powersave/tuned.conf
@@ -7,7 +7,7 @@ summary=Optimize for low power consumption
 
 [cpu]
 governor=ondemand
-energy_perf_bias=power
+energy_perf_bias=powersave|power
 
 [eeepc_she]
 
