--- a/profiles/realtime-virtual-host/tuned.conf
+++ b/profiles/realtime-virtual-host/tuned.conf
@@ -39,6 +39,8 @@ group.rcub=0:f:4:*:rcub.*
 # for i in `pgrep ktimersoftd` ; do grep Cpus_allowed_list /proc/$i/status ; done
 group.ktimersoftd=0:f:3:*:ktimersoftd.*
 
+ps_blacklist=ksoftirqd.*;rcuc.*;rcub.*;ktimersoftd.*
+
 [script]
 script=${i:PROFILE_DIR}/script.sh
 
