--- a/tuned-main.conf
+++ b/tuned-main.conf
@@ -32,3 +32,9 @@ default_instance_priority = 0
 
 # Udev buffer size
 udev_buffer_size = 1MB
+
+# Log file count
+log_file_count = 2
+
+# Log file max size
+log_file_max_size = 100KB
