--- a/profiles/realtime-virtual-guest/tuned.conf
+++ b/profiles/realtime-virtual-guest/tuned.conf
@@ -36,5 +36,8 @@ group.ktimersoftd=0:f:3:*:ktimersoftd.*
 
 ps_blacklist=ksoftirqd.*;rcuc.*;rcub.*;ktimersoftd.*
 
+[script]
+script=${i:PROFILE_DIR}/script.sh
+
 [bootloader]
 cmdline_rvg=+nohz=on nohz_full=${isolated_cores} rcu_nocbs=${isolated_cores}
