--- a/profiles/virtual-host/tuned.conf
+++ b/profiles/virtual-host/tuned.conf
@@ -4,4 +4,17 @@
 
 [main]
 summary=Optimize for running KVM guests
-include=latency-performance
+include=throughput-performance
+
+[sysctl]
+# Start background writeback (via writeback threads) at this percentage (system
+# default is 10%)
+vm.dirty_background_ratio = 5
+
+# The total time the scheduler will consider a migrated process
+# "cache hot" and thus less likely to be re-migrated
+# (system default is 500000, i.e. 0.5 ms)
+kernel.sched_migration_cost_ns = 5000000
+
+# Setting C3 state sleep mode/power savings
+force_latency=70
