--- a/profiles/hpc-compute/tuned.conf
+++ b/profiles/hpc-compute/tuned.conf
@@ -4,9 +4,25 @@
 
 [main]
 summary=Optimize for HPC compute workloads
-include=throughput-performance
+description=Configures virtual memory, CPU governors, and network settings for HPC compute workloads.
+include=latency-performance
+
+[vm]
+transparent_hugepages=always
+
+[disk]
+readahead=>4096
 
 [sysctl]
+# Forces hugepages to be allocated on non-hotpluggable memory
+vm.hugepages_treat_as_movable=0
+vm.min_free_kbytes=135168
+vm.zone_reclaim_mode=1
+
+# Most HPC applications have NUMA knowledge. Disabling automatic NUMA
+# balancing prevents unwanted memory unmapping. 
+kernel.numa_balancing=0
+
 # Busy polling helps reduce latency in the network receive path
 # by allowing socket layer code to poll the receive queue of a
 # network device, and disabling network interrupts.
@@ -22,16 +38,8 @@ net.core.busy_poll=50
 # on client and server connections.
 net.ipv4.tcp_fastopen=3
 
-# Most HPC applications have NUMA knowledge. Disabling automatic NUMA
-# balancing prevents unwanted memory unmapping. 
-kernel.numa_balancing=0
-
 # The total time the scheduler will consider a migrated process
 # "cache hot" and thus less likely to be re-migrated
 # (system default is 500000, i.e. 0.5 ms)
 kernel.sched_migration_cost_ns=5000000
 
-[vm]
-# Most HPC applications can take advantage of large page sizes.
-# This setting ensures that THP is forced on.
-transparent_hugepages=always
