--- a/profiles/hpc-compute/tuned.conf
+++ b/profiles/hpc-compute/tuned.conf
@@ -8,20 +8,30 @@ description=Configures virtual memory, CPU governors, and network settings for H
 include=latency-performance
 
 [vm]
+# Most HPC application can take advantage of hugepages. Force them to on.
 transparent_hugepages=always
 
 [disk]
+# Increase the readahead value to support large, contiguous, files.
 readahead=>4096
 
 [sysctl]
 # Forces hugepages to be allocated on non-hotpluggable memory
 vm.hugepages_treat_as_movable=0
-vm.min_free_kbytes=135168
-vm.zone_reclaim_mode=1
 
-# Most HPC applications have NUMA knowledge. Disabling automatic NUMA
-# balancing prevents unwanted memory unmapping. 
+# Keep a reasonable amount of memory free to support large mem requests
+vm.min_free_kbytes=135168
+
+# Most HPC applications are NUMA aware. Enabling zone reclaim ensures
+# memory is reclaimed and reallocated from local pages. Disabling
+# automatic NUMA balancing prevents unwanted memory unmapping.
+vm.zone_reclaim_mode=1
 kernel.numa_balancing=0
+
+# The total time the scheduler will consider a migrated process
+# "cache hot" and thus less likely to be re-migrated
+# (system default is 500000, i.e. 0.5 ms)
+kernel.sched_migration_cost_ns=5000000
 
 # Busy polling helps reduce latency in the network receive path
 # by allowing socket layer code to poll the receive queue of a
@@ -38,8 +48,4 @@ net.core.busy_poll=50
 # on client and server connections.
 net.ipv4.tcp_fastopen=3
 
-# The total time the scheduler will consider a migrated process
-# "cache hot" and thus less likely to be re-migrated
-# (system default is 500000, i.e. 0.5 ms)
-kernel.sched_migration_cost_ns=5000000
 
