--- a/profiles/balanced/tuned.conf
+++ b/profiles/balanced/tuned.conf
@@ -10,7 +10,7 @@ cpufreq_conservative=+r
 
 [cpu]
 priority=10
-governor=conservative
+governor=conservative|powersave
 energy_perf_bias=normal
 
 [audio]
