balanced: added explicit priority to CPU plugin instance
Related: #158

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/profiles/balanced/tuned.conf
+++ b/profiles/balanced/tuned.conf
@@ -9,6 +9,7 @@ summary=General non-specialized tuned profile
 cpufreq_conservative=+r
 
 [cpu]
+priority=10
 governor=conservative
 energy_perf_bias=normal
 
