--- a/profiles/sap-netweaver/tuned.conf
+++ b/profiles/sap-netweaver/tuned.conf
@@ -7,7 +7,7 @@ summary=Optimize for SAP NetWeaver
 include=throughput-performance
 
 [sysctl]
-kernel.sem = 1250 256000 100 8192
+kernel.sem = 32000 1024000000 500 32000
 vm.max_map_count = 2000000
 
 [script]
