--- a/profiles/sap-netweaver/tuned.conf
+++ b/profiles/sap-netweaver/tuned.conf
@@ -8,7 +8,6 @@ include=throughput-performance
 
 [sysctl]
 kernel.sem = 32000 1024000000 500 32000
+kernel.shmall = 18446744073692774399
+kernel.shmmax = 18446744073692774399
 vm.max_map_count = 2000000
-
-[script]
-script=${i:PROFILE_DIR}/script.sh
