Used C-states in latency specification
For sap-hana and virtual-host profiles used state3 (i.e. usually C3)
C-state in latency specification instead of the hardcoded value 70 us,
i.e.:
force_latency=cstate.id:3|70

Also dropped obsoleted TODO note from the plugin_cpu.

Related: rhbz#1737628

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/profiles/sap-hana/tuned.conf
+++ b/profiles/sap-hana/tuned.conf
@@ -7,7 +7,7 @@ summary=Optimize for SAP HANA
 include=throughput-performance
 
 [cpu]
-force_latency=70
+force_latency=cstate.id:3|70
 
 [vm]
 transparent_hugepages=never
