--- a/profiles/virtual-host/tuned.conf
+++ b/profiles/virtual-host/tuned.conf
@@ -18,4 +18,4 @@ kernel.sched_migration_cost_ns = 5000000
 
 [cpu]
 # Setting C3 state sleep mode/power savings
-force_latency=70
+force_latency=cstate.id:3|70
