--- a/profiles/realtime/tuned.conf
+++ b/profiles/realtime/tuned.conf
@@ -37,7 +37,7 @@ kernel.timer_migration = 0
 /sys/devices/system/machinecheck/machinecheck*/ignore_ce = 1
 
 [bootloader]
-cmdline_realtime=+isolcpus=${isolated_cores} intel_pstate=disable nosoftlockup nowatchdog
+cmdline_realtime=+isolcpus=${isolated_cores} intel_pstate=disable nosoftlockup tsc=nowatchdog
 
 [script]
 script = ${i:PROFILE_DIR}/script.sh
