beakerlib: enabled testing in yaml
Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/.packit.yaml
+++ b/.packit.yaml
@@ -7,6 +7,13 @@ jobs:
     - fedora-31-x86_64
     - fedora-rawhide-x86_64
   trigger: pull_request
+- job: tests
+  trigger: pull_request
+  metadata:
+    targets:
+    - fedora-30-x86_64
+    - fedora-31-x86_64
+    - fedora-rawhide-x86_64
 specfile_path: tuned.spec
 synced_files:
 - tuned.spec
