packit: minor updates
Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/.packit.yaml
+++ b/.packit.yaml
@@ -6,6 +6,7 @@ jobs:
     - fedora-30-x86_64
     - fedora-31-x86_64
     - fedora-rawhide-x86_64
+    - epel-8-x86_64
   trigger: pull_request
 - job: tests
   trigger: pull_request
@@ -14,6 +15,7 @@ jobs:
     - fedora-30-x86_64
     - fedora-31-x86_64
     - fedora-rawhide-x86_64
+    - epel-8-x86_64
 specfile_path: tuned.spec
 synced_files:
 - tuned.spec
