--- a/profiles/sap-hana/tuned.conf
+++ b/profiles/sap-hana/tuned.conf
@@ -4,10 +4,12 @@
 
 [main]
 summary=Optimize for SAP HANA
-include=throughput-performance
 
 [cpu]
 force_latency=cstate.id:3|70
+governor=performance
+energy_perf_bias=performance
+min_perf_pct=100
 
 [vm]
 transparent_hugepages=never
@@ -15,3 +17,8 @@ transparent_hugepages=never
 [sysctl]
 kernel.sem = 32000 1024000000 500 32000
 kernel.numa_balancing = 0
+kernel.sched_min_granularity_ns = 3000000
+kernel.sched_wakeup_granularity_ns = 4000000
+vm.dirty_ratio = 40
+vm.dirty_background_ratio = 10
+vm.swappiness = 10
