--- a/profiles/realtime/tuned.conf
+++ b/profiles/realtime/tuned.conf
@@ -12,6 +12,10 @@ include = network-latency
 include = /etc/tuned/realtime-variables.conf
 
 isolated_cores_assert_check = \\${isolated_cores}
+# Make sure isolated_cores is defined before any of the variables that
+# use it (such as assert1) are defined, so that child profiles can set
+# isolated_cores directly in the profile (tuned.conf)
+isolated_cores = ${isolated_cores}
 # Fail if isolated_cores are not set
 assert1=${f:assertion_non_equal:isolated_cores are set:${isolated_cores}:${isolated_cores_assert_check}}
 
