realtime: Enable timer migration
The patch was provided by Luiz Capitulino.

Resolves: rhbz#1779719

Signed-off-by: Ondřej Lysoněk <olysonek@redhat.com>

--- a/profiles/realtime-virtual-guest/tuned.conf
+++ b/profiles/realtime-virtual-guest/tuned.conf
@@ -36,6 +36,9 @@ group.ktimersoftd=0:f:3:*:ktimersoftd.*
 
 ps_blacklist=ksoftirqd.*;rcuc.*;rcub.*;ktimersoftd.*
 
+[sysctl]
+kernel.timer_migration = 1
+
 [script]
 script=${i:PROFILE_DIR}/script.sh
 
