cpu-partitioning: Use the irqbalance plugin
Use the new irqbalance plugin instead of a script to set up
irqbalance.

Note that I'm not setting priority for the 'irqbalance' instance,
whereas the 'script' instance has a priority of 5. However, this was
added just for initrd image generation in commit 843dc8cf5f3a9ea176e13
and I don't think the irqbalance instance needs to be ordered in any
specific way.

Resolves: rhbz#1784645

Signed-off-by: Ondřej Lysoněk <olysonek@redhat.com>

--- a/profiles/cpu-partitioning/tuned.conf
+++ b/profiles/cpu-partitioning/tuned.conf
@@ -49,6 +49,9 @@ kernel.timer_migration = 0
 [systemd]
 cpu_affinity=${not_isolated_cores_expanded}
 
+[irqbalance]
+banned_cpus=${isolated_cores}
+
 [script]
 priority=5
 script=${i:PROFILE_DIR}/script.sh
