realtime: Use the irqbalance plugin
Use the new irqbalance plugin instead of a script to set up
irqbalance.

I'm placing the 'irqbalance' instance before the 'script' instance so
that it's executed at the same time as the script, however I don't
think the 'irqbalance' instance needs to be ordered in any specific
way and could be placed almost anywhere.

Resolves: rhbz#1784645

Signed-off-by: Ondřej Lysoněk <olysonek@redhat.com>

--- a/profiles/realtime/tuned.conf
+++ b/profiles/realtime/tuned.conf
@@ -50,6 +50,9 @@ kernel.timer_migration = 0
 [bootloader]
 cmdline_realtime=+isolcpus=${managed_irq}${isolated_cores} intel_pstate=disable nosoftlockup tsc=nowatchdog
 
+[irqbalance]
+banned_cpus=${isolated_cores}
+
 [script]
 script = ${i:PROFILE_DIR}/script.sh
 
