throughput-performance: added arch specific tuning for AMD
Resolves: rhbz#1746957

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/profiles/throughput-performance/tuned.conf
+++ b/profiles/throughput-performance/tuned.conf
@@ -7,6 +7,7 @@ summary=Broadly applicable tuning that provides excellent performance across a v
 
 [variables]
 thunderx_cpuinfo_regex=CPU part\s+:\s+(0x0?516)|(0x0?af)|(0x0?a[0-3])|(0x0?b8)\b
+amd_cpuinfo_regex=model name\s+:.*\bAMD\b
 
 [cpu]
 governor=performance
@@ -76,4 +77,12 @@ vm.swappiness=10
 type=sysctl
 uname_regex=aarch64
 cpuinfo_regex=${thunderx_cpuinfo_regex}
+kernel.numa_balancing=0
+
+# AMD
+[sysctl.amd]
+type=sysctl
+uname_regex=x86_64
+cpuinfo_regex=${amd_cpuinfo_regex}
+kernel.sched_migration_cost_ns=5000000
 kernel.numa_balancing=0
