--- a/profiles/cpu-partitioning/tuned.conf
+++ b/profiles/cpu-partitioning/tuned.conf
@@ -58,7 +58,7 @@ script=${i:PROFILE_DIR}/script.sh
 
 [scheduler]
 isolated_cores=${isolated_cores}
-ps_blacklist=.*pmd.*;.*PMD.*;^DPDK;.*qemu-kvm.*
+ps_blacklist=.*pmd.*;.*PMD.*;^DPDK;.*qemu-kvm.*;^contrail-vroute$;^lcore-slave-.*;^rte_mp_handle$;^rte_mp_async$;^eal-intr-thread$
 
 [bootloader]
 priority=10
