--- a/tuned.service
+++ b/tuned.service
@@ -1,6 +1,8 @@
 [Unit]
 Description=Dynamic System Tuning Daemon
-After=systemd-sysctl.service network.target dbus.service polkit.service
+Before=network-pre.target
+Wants=network-pre.target
+After=systemd-sysctl.service dbus.service polkit.service
 Requires=dbus.service
 Conflicts=cpupower.service auto-cpufreq.service tlp.service power-profiles-daemon.service
 Documentation=man:tuned(8) man:tuned.conf(5) man:tuned-adm(8)
