Update of video plugin's radeon_powersave command for amdgpu module.
Signed-off-by: Jan Zerdik <jzerdik@redhat.com>

--- a/profiles/desktop-powersave/tuned.conf
+++ b/profiles/desktop-powersave/tuned.conf
@@ -7,7 +7,7 @@ summary=Optmize for the desktop use-case with power saving
 include=server-powersave
 
 [video]
-radeon_powersave=dpm-battery, auto
+radeon_powersave=level-low, dpm-battery, auto
 
 [net]
 # Comma separated list of devices, all devices if commented out.
