--- a/profiles/powersave/tuned.conf
+++ b/profiles/powersave/tuned.conf
@@ -17,7 +17,7 @@ energy_perf_bias=powersave|power
 timeout=10
 
 [video]
-radeon_powersave=dpm-battery, auto
+radeon_powersave=level-low, dpm-battery, auto
 
 [disk]
 # Comma separated list of devices, all devices if commented out.
