--- a/profiles/balanced/tuned.conf
+++ b/profiles/balanced/tuned.conf
@@ -17,7 +17,7 @@ energy_perf_bias=normal
 timeout=10
 
 [video]
-radeon_powersave=dpm-balanced, auto
+radeon_powersave=level-auto, dpm-balanced, auto
 
 [disk]
 # Comma separated list of devices, all devices if commented out.
