mssql: update profile to be in sync with MS recommendations
Resolves: rhbz#1942733

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/profiles/mssql/tuned.conf
+++ b/profiles/mssql/tuned.conf
@@ -3,15 +3,29 @@
 #
 
 [main]
-summary=Optimize for MS SQL Server
+summary=Optimize for Microsoft SQL Server
 include=throughput-performance
 
+[cpu]
+force_latency=5
+
 [vm]
-transparent_hugepage.defrag=always
+# For multi-instance SQL deployments use 'madvise' instead of 'always'
+transparent_hugepages=always
 
 [sysctl]
-vm.max_map_count=800000
+vm.swappiness=1
+vm.dirty_background_ratio=3
+vm.dirty_ratio=80
+vm.dirty_expire_centisecs=500
+vm.dirty_writeback_centisecs=100
+vm.max_map_count=1600000
+net.core.rmem_default=262144
+net.core.rmem_max=4194304
+net.core.wmem_default=262144
+net.core.wmem_max=1048576
 kernel.numa_balancing=0
 kernel.sched_latency_ns=60000000
+kernel.sched_migration_cost_ns=500000
 kernel.sched_min_granularity_ns=15000000
 kernel.sched_wakeup_granularity_ns=2000000
