--- a/profiles/realtime-virtual-host/realtime-virtual-host-variables.conf
+++ b/profiles/realtime-virtual-host/realtime-virtual-host-variables.conf
@@ -1,4 +1,23 @@
+#
+# Variable settings below override the definitions from the
+# /etc/tuned/realtime-variables.conf file.
+#
 # Examples:
 # isolated_cores=2,4-7
 # isolated_cores=2-23
 #
+#
+# Uncomment the 'isolate_managed_irq=Y' bellow if you want to move kernel
+# managed IRQs out of isolated cores. Note that this requires kernel
+# support. Please only specify this parameter if you are sure that the
+# kernel supports it.
+#
+# isolate_managed_irq=Y
+#
+#
+# Set the desired combined queue count value using the parameter provided
+# below. Ideally this should be set to the number of housekeeping CPUs i.e.,
+# in the example given below it is assumed that the system has 4 housekeeping
+# (non-isolated) CPUs.
+#
+# netdev_queue_count=4
