--- a/profiles/sap-hana/tuned.conf
+++ b/profiles/sap-hana/tuned.conf
@@ -17,8 +17,10 @@ transparent_hugepages=never
 [sysctl]
 kernel.sem = 32000 1024000000 500 32000
 kernel.numa_balancing = 0
-kernel.sched_min_granularity_ns = 3000000
-kernel.sched_wakeup_granularity_ns = 4000000
 vm.dirty_ratio = 40
 vm.dirty_background_ratio = 10
 vm.swappiness = 10
+
+[scheduler]
+sched_min_granularity_ns = 3000000
+sched_wakeup_granularity_ns = 4000000
