--- a/profiles/throughput-performance/tuned.conf
+++ b/profiles/throughput-performance/tuned.conf
@@ -28,20 +28,6 @@ transparent_hugepages=never
 readahead=>4096
 
 [sysctl]
-# ktune sysctl settings for rhel6 servers, maximizing i/o throughput
-#
-# Minimal preemption granularity for CPU-bound tasks:
-# (default: 1 msec#  (1 + ilog(ncpus)), units: nanoseconds)
-kernel.sched_min_granularity_ns = 10000000
-
-# SCHED_OTHER wake-up granularity.
-# (default: 1 msec#  (1 + ilog(ncpus)), units: nanoseconds)
-#
-# This option delays the preemption effects of decoupled workloads
-# and reduces their over-scheduling. Synchronous workloads will still
-# have immediate wakeup/sleep latencies.
-kernel.sched_wakeup_granularity_ns = 15000000
-
 # If a workload mostly uses anonymous memory and it hits this limit, the entire
 # working set is buffered for I/O, and any more write buffering would require
 # swapping, so it's time to throttle writes until I/O can catch up.  Workloads
@@ -72,6 +58,21 @@ vm.dirty_background_ratio = 10
 # and move them to swap cache
 vm.swappiness=10
 
+[scheduler]
+# ktune sysctl settings for rhel6 servers, maximizing i/o throughput
+#
+# Minimal preemption granularity for CPU-bound tasks:
+# (default: 1 msec#  (1 + ilog(ncpus)), units: nanoseconds)
+sched_min_granularity_ns = 10000000
+
+# SCHED_OTHER wake-up granularity.
+# (default: 1 msec#  (1 + ilog(ncpus)), units: nanoseconds)
+#
+# This option delays the preemption effects of decoupled workloads
+# and reduces their over-scheduling. Synchronous workloads will still
+# have immediate wakeup/sleep latencies.
+sched_wakeup_granularity_ns = 15000000
+
 # Marvell ThunderX
 [sysctl.thunderx]
 type=sysctl
@@ -80,8 +81,8 @@ cpuinfo_regex=${thunderx_cpuinfo_regex}
 kernel.numa_balancing=0
 
 # AMD
-[sysctl.amd]
-type=sysctl
+[scheduler.amd]
+type=scheduler
 uname_regex=x86_64
 cpuinfo_regex=${amd_cpuinfo_regex}
-kernel.sched_migration_cost_ns=5000000
+sched_migration_cost_ns=5000000
