nfv: profiles summary fix
Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/profiles/realtime-virtual-guest/tuned.conf
+++ b/profiles/realtime-virtual-guest/tuned.conf
@@ -3,7 +3,7 @@
 #
 
 [main]
-summary=Optimize for realtime workloads running within a KVM guest
+summary=Optimize for virtual guests based on realtime profile
 include=realtime
 
 [variables]
