--- a/profiles/realtime-virtual-host/tuned.conf
+++ b/profiles/realtime-virtual-host/tuned.conf
@@ -8,7 +8,7 @@
 # - wc
 
 [main]
-summary=Optimize for KVM guests running realtime workloads
+summary=Optimize for virtual hosts based on realtime profile
 include=realtime
 
 [variables]
