Adding reload of nf_conntrack module to profiles that contains nf_conntrack_hashsize option
Resolves: rhbz#2064755

Signed-off-by: Jan Zerdik <jzerdik@redhat.com>

--- a/profiles/openshift/tuned.conf
+++ b/profiles/openshift/tuned.conf
@@ -9,6 +9,9 @@ include=${f:virt_check:virtual-guest:throughput-performance}
 [selinux]
 avc_cache_threshold=8192
 
+[modules]
+nf_conntrack=+r
+
 [net]
 nf_conntrack_hashsize=1048576
 
