--- a/profiles/atomic-host/tuned.conf
+++ b/profiles/atomic-host/tuned.conf
@@ -9,6 +9,9 @@ include=throughput-performance
 [selinux]
 avc_cache_threshold=65536
 
+[modules]
+nf_conntrack=+r
+
 [net]
 nf_conntrack_hashsize=1048576
 
