--- a/profiles/virtual-host/tuned.conf
+++ b/profiles/virtual-host/tuned.conf
@@ -7,6 +7,15 @@ summary=Optimize for running KVM guests
 include=throughput-performance
 
 [sysctl]
+# If a workload mostly uses anonymous memory and it hits this limit, the entire
+# working set is buffered for I/O, and any more write buffering would require
+# swapping, so it's time to throttle writes until I/O can catch up.  Workloads
+# that mostly use file mappings may be able to use even higher values.
+#
+# The generator of dirty data starts writeback at this percentage (system default
+# is 20%)
+vm.dirty_ratio = 10
+
 # Start background writeback (via writeback threads) at this percentage (system
 # default is 10%)
 vm.dirty_background_ratio = 5
