--- a/profiles/network-latency/tuned.conf
+++ b/profiles/network-latency/tuned.conf
@@ -20,4 +20,4 @@ vm.stat_interval = 10
 kernel.timer_migration = 0
 
 [bootloader]
-cmdline_network_latency=skew_tick=1
+cmdline_network_latency=skew_tick=1 tsc=reliable
