--- a/profiles/realtime/tuned.conf
+++ b/profiles/realtime/tuned.conf
@@ -48,7 +48,7 @@ kernel.sched_rt_runtime_us = -1
 /sys/devices/system/machinecheck/machinecheck*/ignore_ce = 1
 
 [bootloader]
-cmdline_realtime=+isolcpus=${managed_irq}${isolated_cores} intel_pstate=disable nosoftlockup tsc=reliable
+cmdline_realtime=+isolcpus=${managed_irq}${isolated_cores} intel_pstate=disable nosoftlockup
 
 [irqbalance]
 banned_cpus=${isolated_cores}
