--- a/profiles/network-latency/tuned.conf
+++ b/profiles/network-latency/tuned.conf
@@ -20,6 +20,6 @@ vm.stat_interval = 10
 kernel.timer_migration = 0
 
 [bootloader]
-cmdline_network_latency=skew_tick=1 tsc=reliable
+cmdline_network_latency=skew_tick=1 tsc=reliable rcupdate.rcu_normal_after_boot=1
 
 [rtentsk]
