powersave: add EPP powersave
Fixes #563

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/profiles/powersave/tuned.conf
+++ b/profiles/powersave/tuned.conf
@@ -8,6 +8,7 @@ summary=Optimize for low power consumption
 [cpu]
 governor=ondemand|powersave
 energy_perf_bias=powersave|power
+energy_performance_preference=powersave
 
 [eeepc_she]
 
