Add an ACPI plugin
Resolves: RHEL-16966

At this point, the plugin supports setting a single sysfs attribute,
platform_profile.

The 3 basic ACPI platform profiles are low-power, balanced, and
performance. These are mapped to the generic powersave,
balanced, and *-performance TuneD profiles.

--- a/profiles/balanced/tuned.conf
+++ b/profiles/balanced/tuned.conf
@@ -14,6 +14,9 @@ governor=conservative|powersave
 energy_perf_bias=normal
 energy_performance_preference=balance_performance
 
+[acpi]
+platform_profile=balanced
+
 [audio]
 timeout=10
 
