--- a/profiles/powersave/tuned.conf
+++ b/profiles/powersave/tuned.conf
@@ -10,6 +10,9 @@ governor=ondemand|powersave
 energy_perf_bias=powersave|power
 energy_performance_preference=power
 
+[acpi]
+platform_profile=low-power|quiet
+
 [eeepc_she]
 
 [vm]
