--- a/profiles/throughput-performance/tuned.conf
+++ b/profiles/throughput-performance/tuned.conf
@@ -15,6 +15,9 @@ energy_perf_bias=performance
 min_perf_pct=100
 energy_performance_preference=performance
 
+[acpi]
+platform_profile=performance
+
 # Marvell ThunderX
 [vm.thunderx]
 type=vm
