Add EPP settings to various configurations
This commit adds 'energy_performance_preference' tunings for some of the premade configurations in TuneD. For more information about energy_performance_preference, see https://www.kernel.org/doc/html/v4.19/admin-guide/pm/intel_pstate.html#energy-vs-performance-hints

Signed-off-by: Ryan Brue <ryanbrue@hotmail.com>

--- a/profiles/balanced/tuned.conf
+++ b/profiles/balanced/tuned.conf
@@ -12,6 +12,7 @@ cpufreq_conservative=+r
 priority=10
 governor=conservative|powersave
 energy_perf_bias=normal
+energy_performance_preference=balance_performance
 
 [audio]
 timeout=10
