--- a/profiles/latency-performance/tuned.conf
+++ b/profiles/latency-performance/tuned.conf
@@ -9,6 +9,7 @@ summary=Optimize for deterministic performance at the cost of increased power co
 force_latency=cstate.id_no_zero:1|3
 governor=performance
 energy_perf_bias=performance
+energy_performance_preference=performance
 min_perf_pct=100
 
 [sysctl]
