--- a/profiles/throughput-performance/tuned.conf
+++ b/profiles/throughput-performance/tuned.conf
@@ -12,6 +12,7 @@ amd_cpuinfo_regex=model name\s+:.*\bAMD\b
 [cpu]
 governor=performance
 energy_perf_bias=performance
+energy_performance_preference=performance
 min_perf_pct=100
 
 # Marvell ThunderX
