Add EPP settings to various configurations

--- a/profiles/desktop-powersave/tuned.conf
+++ b/profiles/desktop-powersave/tuned.conf
@@ -6,6 +6,9 @@
 summary=Optmize for the desktop use-case with power saving
 include=server-powersave
 
+[cpu]
+energy_performance_preference=balance_power
+
 [video]
 radeon_powersave=dpm-battery, auto
 
