profiles: add energy_performance_preference hints to profiles
This commit adds 'energy_performance_preference' tunings for some of the premade profiles in TuneD. For more information about energy_performance_preference, see https://www.kernel.org/doc/html/v4.19/admin-guide/pm/intel_pstate.html#energy-vs-performance-hints

Signed-off-by: Ryan Brue <ryanbrue@hotmail.com>

--- a/profiles/throughput-performance/tuned.conf
+++ b/profiles/throughput-performance/tuned.conf
@@ -13,6 +13,7 @@ amd_cpuinfo_regex=model name\s+:.*\bAMD\b
 governor=performance
 energy_perf_bias=performance
 min_perf_pct=100
+energy_performance_preference=performance
 
 # Marvell ThunderX
 [vm.thunderx]
