--- a/tuned-main.conf
+++ b/tuned-main.conf
@@ -86,4 +86,4 @@ log_file_max_size = 1MB
 # Directories to search for profiles separated by , or ;
 # In case of conflicts in profile names, the later directory
 # takes precedence
-# profile_dirs = /usr/lib/tuned,/etc/tuned
+# profile_dirs = /usr/lib/tuned/profiles,/etc/tuned/profiles
