tuned-ppd: Add an option to log to a file
And adjust the systemd service file to log to
/var/log/tuned/tuned-ppd.log by default.

Additionally, add an option to turn on debug
level logging.

--- a/tuned/ppd/tuned-ppd.service
+++ b/tuned/ppd/tuned-ppd.service
@@ -8,7 +8,7 @@ Before=multi-user.target display-manager.target
 Type=dbus
 PIDFile=/run/tuned/tuned-ppd.pid
 BusName=net.hadess.PowerProfiles
-ExecStart=/usr/sbin/tuned-ppd
+ExecStart=/usr/sbin/tuned-ppd -l
 
 [Install]
 WantedBy=graphical.target
