--- a/profiles/powersave/tuned.conf
+++ b/profiles/powersave/tuned.conf
@@ -9,6 +9,7 @@ summary=Optimize for low power consumption
 governor=ondemand|powersave
 energy_perf_bias=powersave|power
 energy_performance_preference=power
+boost=0
 
 [acpi]
 platform_profile=low-power|quiet
