Adjust profiles to set dirty_(bytes|ratio) via the vm plugin

--- a/profiles/mssql/tuned.conf
+++ b/profiles/mssql/tuned.conf
@@ -12,11 +12,11 @@ force_latency=5
 [vm]
 # For multi-instance SQL deployments use 'madvise' instead of 'always'
 transparent_hugepages=always
+dirty_background_ratio=3
+dirty_ratio=80
 
 [sysctl]
 vm.swappiness=1
-vm.dirty_background_ratio=3
-vm.dirty_ratio=80
 vm.dirty_expire_centisecs=500
 vm.dirty_writeback_centisecs=100
 vm.max_map_count=1600000
