--- a/profiles/oracle/tuned.conf
+++ b/profiles/oracle/tuned.conf
@@ -8,8 +8,6 @@ include=throughput-performance
 
 [sysctl]
 vm.swappiness = 10
-vm.dirty_background_ratio = 3
-vm.dirty_ratio = 40
 vm.dirty_expire_centisecs = 500
 vm.dirty_writeback_centisecs = 100
 kernel.shmmax = 4398046511104
@@ -27,4 +25,6 @@ kernel.panic_on_oops = 1
 kernel.numa_balancing = 0
 
 [vm]
+dirty_background_ratio = 3
+dirty_ratio = 40
 transparent_hugepages=never
