--- a/profiles/spectrumscale-ece/tuned.conf
+++ b/profiles/spectrumscale-ece/tuned.conf
@@ -11,10 +11,12 @@ governor=performance
 energy_perf_bias=performance
 min_perf_pct=100
 
+[vm]
+dirty_ratio = 40
+dirty_background_ratio = 10
+
 [sysctl]
 kernel.numa_balancing = 1
-vm.dirty_ratio = 40
-vm.dirty_background_ratio = 10
 vm.swappiness=10
 net.ipv4.tcp_window_scaling = 1
 net.ipv4.tcp_timestamps = 1
