--- a/profiles/spindown-disk/tuned.conf
+++ b/profiles/spindown-disk/tuned.conf
@@ -26,10 +26,12 @@ spindown=6
 [scsi_host]
 alpm=medium_power
 
+[vm]
+dirty_ratio=60
+
 [sysctl]
 vm.dirty_writeback_centisecs=6000
 vm.dirty_expire_centisecs=9000
-vm.dirty_ratio=60
 vm.laptop_mode=5
 vm.swappiness=30
 
