--- a/profiles/throughput-performance/tuned.conf
+++ b/profiles/throughput-performance/tuned.conf
@@ -17,6 +17,20 @@ energy_performance_preference=performance
 [acpi]
 platform_profile=performance
 
+[vm]
+# If a workload mostly uses anonymous memory and it hits this limit, the entire
+# working set is buffered for I/O, and any more write buffering would require
+# swapping, so it's time to throttle writes until I/O can catch up.  Workloads
+# that mostly use file mappings may be able to use even higher values.
+#
+# The generator of dirty data starts writeback at this percentage (system default
+# is 20%)
+dirty_ratio = 40
+
+# Start background writeback (via writeback threads) at this percentage (system
+# default is 10%)
+dirty_background_ratio = 10
+
 # Marvell ThunderX
 [vm.thunderx]
 type=vm
@@ -31,19 +45,6 @@ transparent_hugepages=never
 readahead=>4096
 
 [sysctl]
-# If a workload mostly uses anonymous memory and it hits this limit, the entire
-# working set is buffered for I/O, and any more write buffering would require
-# swapping, so it's time to throttle writes until I/O can catch up.  Workloads
-# that mostly use file mappings may be able to use even higher values.
-#
-# The generator of dirty data starts writeback at this percentage (system default
-# is 20%)
-vm.dirty_ratio = 40
-
-# Start background writeback (via writeback threads) at this percentage (system
-# default is 10%)
-vm.dirty_background_ratio = 10
-
 # PID allocation wrap value.  When the kernel's next PID value
 # reaches this value, it wraps back to a minimum PID value.
 # PIDs of value pid_max or larger are not allocated.
