--- a/profiles/virtual-host/tuned.conf
+++ b/profiles/virtual-host/tuned.conf
@@ -6,10 +6,10 @@
 summary=Optimize for running KVM guests
 include=throughput-performance
 
-[sysctl]
+[vm]
 # Start background writeback (via writeback threads) at this percentage (system
 # default is 10%)
-vm.dirty_background_ratio = 5
+dirty_background_ratio = 5
 
 [cpu]
 # Setting C3 state sleep mode/power savings
