--- a/profiles/accelerator-performance/tuned.conf
+++ b/profiles/accelerator-performance/tuned.conf
@@ -17,7 +17,7 @@ platform_profile=performance
 [disk]
 readahead=>4096
 
-[sysctl]
+[vm]
 # If a workload mostly uses anonymous memory and it hits this limit, the entire
 # working set is buffered for I/O, and any more write buffering would require
 # swapping, so it's time to throttle writes until I/O can catch up.  Workloads
@@ -25,12 +25,13 @@ readahead=>4096
 #
 # The generator of dirty data starts writeback at this percentage (system default
 # is 20%)
-vm.dirty_ratio = 40
+dirty_ratio = 40
 
 # Start background writeback (via writeback threads) at this percentage (system
 # default is 10%)
-vm.dirty_background_ratio = 10
+dirty_background_ratio = 10
 
+[sysctl]
 # PID allocation wrap value.  When the kernel's next PID value
 # reaches this value, it wraps back to a minimum PID value.
 # PIDs of value pid_max or larger are not allocated.
