--- a/profiles/latency-performance/tuned.conf
+++ b/profiles/latency-performance/tuned.conf
@@ -14,7 +14,7 @@ min_perf_pct=100
 [acpi]
 platform_profile=performance
 
-[sysctl]
+[vm]
 # If a workload mostly uses anonymous memory and it hits this limit, the entire
 # working set is buffered for I/O, and any more write buffering would require
 # swapping, so it's time to throttle writes until I/O can catch up.  Workloads
@@ -22,12 +22,13 @@ platform_profile=performance
 #
 # The generator of dirty data starts writeback at this percentage (system default
 # is 20%)
-vm.dirty_ratio=10
+dirty_ratio=10
 
 # Start background writeback (via writeback threads) at this percentage (system
 # default is 10%)
-vm.dirty_background_ratio=3
+dirty_background_ratio=3
 
+[sysctl]
 # The swappiness parameter controls the tendency of the kernel to move
 # processes out of physical memory and onto the swap disk.
 # 0 tells the kernel to avoid swapping processes out of physical memory
