--- a/profiles/sap-hana/tuned.conf
+++ b/profiles/sap-hana/tuned.conf
@@ -13,10 +13,10 @@ min_perf_pct=100
 
 [vm]
 transparent_hugepages=never
+dirty_ratio = 40
+dirty_background_ratio = 10
 
 [sysctl]
 kernel.sem = 32000 1024000000 500 32000
 kernel.numa_balancing = 0
-vm.dirty_ratio = 40
-vm.dirty_background_ratio = 10
 vm.swappiness = 10
