--- a/profiles/virtual-guest/tuned.conf
+++ b/profiles/virtual-guest/tuned.conf
@@ -6,7 +6,7 @@
 summary=Optimize for running inside a virtual guest
 include=throughput-performance
 
-[sysctl]
+[vm]
 # If a workload mostly uses anonymous memory and it hits this limit, the entire
 # working set is buffered for I/O, and any more write buffering would require
 # swapping, so it's time to throttle writes until I/O can catch up.  Workloads
@@ -14,8 +14,9 @@ include=throughput-performance
 #
 # The generator of dirty data starts writeback at this percentage (system default
 # is 20%)
-vm.dirty_ratio = 30
+dirty_ratio = 30
 
+[sysctl]
 # Filesystem I/O is usually much more efficient than swapping, so try to keep
 # swapping low.  It's usually safe to go even lower than this on systems with
 # server-grade storage.
